--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,43 @@
 {
-   "action": {
-      "default_icon": {
-         "16": "icons/16.png",
-         "24": "icons/24.png",
-         "32": "icons/32.png"
-      },
-      "default_title": "HunterScope"
-   },
-   "background": {
-      "service_worker": "background.js",
-      "type": "module"
-   },
-   "content_scripts": [ {
-      "js": [ "selectionBubble.js" ],
-      "matches": [ "\u003Call_urls>" ],
-      "run_at": "document_idle"
-   } ],
-   "description": "Right-click selection or links to open IOC in chosen OSINT sites. Add your own categories and providers.",
-   "host_permissions": [ "\u003Call_urls>" ],
-   "icons": {
-      "128": "icons/128.png",
+  "manifest_version": 3,
+  "name": "HunterScope",
+  "version": "2.0.0",
+  "description": "Right-click selection or links to open IOC in chosen OSINT sites. Add your own categories and providers.",
+  "permissions": [
+    "contextMenus",
+    "storage"
+  ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "options_page": "options.html",
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "action": {
+    "default_icon": {
       "16": "icons/16.png",
-      "32": "icons/32.png",
-      "48": "icons/48.png"
-   }
+      "24": "icons/24.png",
+      "32": "icons/32.png"
+    },
+    "default_title": "HunterScope"
+  },
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "selectionBubble.js"
+      ],
+      "run_at": "document_idle"
+    }
+  ]
 }
-
